Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9015

Example qtconcurrent/map does not compile under SunStudio 12.1 (fix included)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.0 Beta
    • 4.7.0
    • Examples and Demos
    • None

    Description

      SunStudio 12.1 can not figure out template parameters. So we have to provide them manually. See patch below:

      diff -ur qt-everywhere-opensource-src-4.7.0-tp.orig/examples/qtconcurrent/map/main.cpp qt-everywhere-opensource-src-4.7.0-tp/examples/qtconcurrent/map/main.cpp
      — qt-everywhere-opensource-src-4.7.0-tp.orig/examples/qtconcurrent/map/main.cpp 2010-03-10 08:54:58.000000000 -0500
      +++ qt-everywhere-opensource-src-4.7.0-tp/examples/qtconcurrent/map/main.cpp 2010-03-13 10:38:13.372209659 -0500
      @@ -67,7 +67,8 @@

      // Use QtConcurrentBlocking::mapped to apply the scale function to all the
      // images in the list.

      • QList<QImage> thumbnails = QtConcurrent::blockingMapped(images, scale);
        + QList<QImage> thumbnails =
        + QtConcurrent::blockingMapped<QList<QImage> >(images, scale);

      return 0;
      }

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ablasche Alex Blasche
            vkni Andrey Bergman
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes