Make qtconcurrent map example compile on exotic compilers

Task-number: QTBUG-9015
Change-Id: I1019765312c8d55728023642601199506269be6d
Reviewed-by: Mitch Curtis <mitch.curtis@digia.com>